--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -2,7 +2,7 @@ dependencies {
     implementation 'org.springframework:spring-webmvc:5.3.9'
     implementation 'org.springframework.security:spring-security-core:5.5.1'
 
-
+    implementation(project(":service"))
     implementation 'org.slf4j:slf4j-api:1.7.31'
     implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
 }
