--- a/db/build.gradle
+++ b/db/build.gradle
@@ -6,4 +6,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.2'
     runtimeOnly 'org.postgresql:postgresql:42.2.23'
     implementation 'org.liquibase:liquibase-core:3.10.3'
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.3'
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+
 }
