fixed UserEntity added simple Dto added new lombok dependencies

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     implementation 'org.springframework:spring-context:5.3.9'
     implementation 'org.springframework:spring-tx:5.3.9'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation 'org.springframework.data:spring-data-commons:2.5.3'
 
