--- a/service/build.gradle
+++ b/service/build.gradle
@@ -18,6 +18,11 @@ dependencies {
     implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
     implementation 'jakarta.persistence:jakarta.persistence-api:2.2.3'
     implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
+    // https://mvnrepository.com/artifact/org.springframework/spring-web
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.20'
+
+
 
 
 }
